# hnode2_slide_digitizer

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindLibCamera.cmake  FindLibExif.cmake  FindLibJpeg.cmake
src/daemon/: CameraManager.cpp  CameraManager.h  CameraThread.cpp  CameraThread.h  GPIOManager.cpp  GPIOManager.h  HNSDAction.cpp  HNSDAction.h  HNSDHardwareControl.cpp  HNSDHardwareControl.h  HNSDImageManager.cpp  HNSDImageManager.h  HNSDImageTransform.cpp  HNSDImageTransform.h  HNSDPipeline.cpp  HNSDPipeline.h  HNSDPipelineManager.cpp  HNSDPipelineManager.h  HNSDStorageManager.cpp  HNSDStorageManager.h  HNSlideDigitizerDevice.cpp  HNSlideDigitizerDevicePrivate.h  JPEGSerializer.cpp  JPEGSerializer.h  hnsldigd.cpp
