CMAKE_MINIMUM_REQUIRED( VERSION 3.0 ) 
PROJECT( hnode2-slide-digitizer ) 

set(CMAKE_BUILD_TYPE Debug)

SET( MAJOR_VERSION 1 )
SET( MINOR_VERSION 0 )
SET( PATCH_VERSION 0 )
SET( RELEASE_VERSION 0 )

SET( DAEMON_NAME hnsldigd )

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake) 

# Default the install prefix to just /usr
IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  SET( CMAKE_INSTALL_PREFIX /usr CACHE PATH "Default to /usr install" FORCE )
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

SET( VERSION ${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION} )
SET( DEBVERSION ${VERSION}-${RELEASE_VERSION} )

ADD_DEFINITIONS( -DVERSION=${VERSION} )

SET( HNSLDIGD_SRC
     ${CMAKE_SOURCE_DIR}/src/daemon/hnsldigd.cpp
     ${CMAKE_SOURCE_DIR}/src/daemon/HNSlideDigitizerDevice.cpp
     ${CMAKE_SOURCE_DIR}/src/daemon/HNSDAction.cpp
     ${CMAKE_SOURCE_DIR}/src/daemon/HNSDImageManager.cpp
     ${CMAKE_SOURCE_DIR}/src/daemon/HNSDHardwareControl.cpp
     ${CMAKE_SOURCE_DIR}/src/daemon/CameraManager.cpp
     ${CMAKE_SOURCE_DIR}/src/daemon/GPIOManager.cpp
     ${CMAKE_SOURCE_DIR}/src/daemon/JPEGSerializer.cpp
)

SET(CMAKE_BUILD_TYPE Debug)

FIND_PACKAGE( Poco REQUIRED Util Foundation Net NetSSL JSON )
FIND_PACKAGE( HNode2 REQUIRED )
FIND_PACKAGE( LibCamera REQUIRED )
FIND_PACKAGE( LibJpeg REQUIRED )
FIND_PACKAGE( LibExif REQUIRED )
FIND_PACKAGE( OpenCV REQUIRED )

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/include ${LibCamera_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} )

ADD_EXECUTABLE( hnsldigd ${HNSLDIGD_SRC} )
TARGET_COMPILE_FEATURES( hnsldigd PRIVATE cxx_std_17 )
TARGET_LINK_LIBRARIES( hnsldigd PRIVATE
    ${Poco_Util_LIBRARY}
    ${Poco_Foundation_LIBRARY}
    ${Poco_Net_LIBRARY}
    ${Poco_NetSSL_LIBRARY}
    ${Poco_JSON_LIBRARY}
)
TARGET_LINK_LIBRARIES( hnsldigd PRIVATE HNode2::common )
TARGET_LINK_LIBRARIES( hnsldigd PRIVATE ${LibCamera_LIBRARIES} )
TARGET_LINK_LIBRARIES( hnsldigd PRIVATE LibJpeg::common )
TARGET_LINK_LIBRARIES( hnsldigd PRIVATE LibExif::common )
TARGET_LINK_LIBRARIES( hnsldigd PRIVATE -pthread )
TARGET_LINK_LIBRARIES( hnsldigd PRIVATE gpiod )
TARGET_LINK_LIBRARIES( hnsldigd PRIVATE ${OpenCV_LIBS} )

INSTALL( TARGETS hnsldigd DESTINATION ${CMAKE_INSTALL_PREFIX}/sbin COMPONENT daemon )

SET( CPACK_GENERATOR "DEB" )

SET( CPACK_DEB_COMPONENT_INSTALL 1 )
SET( CPACK_COMPONENTS_ALL daemon )

SET( CPACK_PACKAGE_VERSION_MAJOR ${MAJOR_VERSION} )
SET( CPACK_PACKAGE_VERSION_MINOR ${MINOR_VERSION} )
SET( CPACK_PACKAGE_VERSION_PATCH ${PATCH_VERSION} )

SET( CPACK_PACKAGE_DESCRIPTION "A HNode2 device for controlling a slide digitizer." )
SET( CPACK_PACKAGE_DESCRIPTION_SUMMARY "The hnode2 slide digitizer control daemon." )
SET( CPACK_PACKAGE_CONTACT "Curtis Nottberg" )
SET( CPACK_PACKAGE_ARCHITECTURE DEB-DEFAULT )

SET( CPACK_DEBIAN_PACKAGE_PRIORITY "optional" )
SET( CPACK_DEBIAN_PACKAGE_SECTION "Daemon" )
SET( CPACK_DEBIAN_PACKAGE_MAINTAINER "Curtis Nottberg" ) #required
SET( CPACK_DEBIAN_PACKAGE_VERSION ${DEBVERSION} )
SET( CPACK_DEBIAN_FILE_NAME DEB-DEFAULT )

INCLUDE(CPack)

